# mle-tech-assessment-jun

./: .gitattributes  .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/utils/: transformations.py
data/processed/: processed_data.csv
data/raw/: raw_data.csv
tests/: test_transformations.py
