[project]
name = "mle-tech-assessment-jun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandera>=0.26.1",
    "pathlib>=1.0.1",
    "numpy>=2.3.3",
    "pandas>=2.3.3"
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.6",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
